# erc8004-svm

./: Anchor.toml  Cargo.toml
programs/erc8004-svm/: Cargo.toml
programs/erc8004-svm/src/: identity.rs  lib.rs  reputation.rs  util.rs  validation.rs
tests/: erc8004.spec.ts
ts/sdk/: package.json
ts/sdk/src/: client.ts  idl.json  types.ts
